services/wallet-service/base/producer-deployment.yaml
# services/wallet-service/base/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-producer
  labels:
    app: wallet-service
    component: producer
    managed-by: gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-service
      component: producer
  template:
    metadata:
      labels:
        app: wallet-service
        component: producer
    spec:
      serviceAccountName: wallet-service-sa
      containers:
      - name: wallet-producer
        image: alphaxad9/wallet_service:0.0.6
        imagePullPolicy: IfNotPresent
        command: ["python", "manage.py", "run_kafka_publisher"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
